general cleanup, added selection of topic by number

--- a/output/DEM.html
+++ b/output/DEM.html
@@ -15,7 +15,7 @@ Detailed collection of data on Africa&mdash;includes social, economic, natural r
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: international,  international business
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ Licensing restrictions limit use to 2-5 simultaneous users. If you are unable to
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  statistics
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ Provides access to interactive charts, quotes, industry analysis and intraday st
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  investment & securities,  stocks
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ U.S. Census Bureau. Provides detailed information for local and regional areas o
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  economic indicators
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ From the World Bank. Presents key indicators tracing the trends in social and ec
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: international,  international business
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ U.S. Census Bureau. County Business Patterns (CBP) is an annual series providing
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  business planning,  economics
 </p></div>
 <h3><a href="
@@ -99,7 +99,7 @@ Data and statistics by listed by topic from U.S government agencies.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  demographics
 </p></div>
 <h3><a href="
@@ -113,7 +113,7 @@ Site managed by the U.S. Census Bureau and devoted exclusively to "Measuring the
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  statistics: united states
 </p></div>
 <h3><a href="
@@ -127,7 +127,7 @@ From the U.S. Census Bureau, Provides a detailed portrait of the United States e
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 labor economics,  statistics: united states,  business planning
 </p></div>
 <h3><a href="
@@ -141,7 +141,7 @@ From the Bureau of Labor Statistics, this site provides data on unemployment rat
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  business planning
 </p></div>
 <h3><a href="
@@ -155,7 +155,7 @@ From The Economist Intelligence Unit, provides economic, political, and market d
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  exports,  imports,  foreign direct investment,  globalization,  news,  statistics: international
 </p></div>
 <h3><a href="
@@ -169,7 +169,7 @@ Provides the world's most comprehensive firm-level data in emerging markets and 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators,  statistics: united states,  country background
 </p></div>
 <h3><a href="
@@ -183,7 +183,7 @@ From the Federal Reserve Bank of St. Louis, FRED is a database of over 45,000 U.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states
 </p></div>
 <h3><a href="
@@ -197,7 +197,7 @@ From the Federal Interagency Council on Statistical Policy. Provides access to F
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 demographics & statistics,  economics,  government
 </p></div>
 <h3><a href="
@@ -211,7 +211,7 @@ The standard source for quantitative indicators of American history. Includes st
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states
 </p></div>
 <h3><a href="
@@ -225,7 +225,7 @@ From the United Nations. An annual "In depth analysis and policy recommendations
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  doing business in,  international business,  statistics: international
 </p></div>
 <h3><a href="
@@ -239,7 +239,7 @@ From the World Bank. Provides key data on information and communications technol
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: international,  technology
 </p></div>
 <h3><a href="
@@ -253,7 +253,7 @@ From the International Monetary Fund. All aspects of international and domestic 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: international
 </p></div>
 <h3><a href="
@@ -267,7 +267,7 @@ From the World Bank. Provides external debt data and selected foreign assets fro
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 debt,  country data,  statistics: international,  economics
 </p></div>
 <h3><a href="
@@ -289,7 +289,7 @@ Regional Business News (EBSCO)
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 demographics & statistics,  regional news,  news
 </p></div>
 <h3><a href="
@@ -303,7 +303,7 @@ Organized links to valuable online resources in economics from the American Econ
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  demographics & statistics,  economic data: united states,  economic data: international
 </p></div>
 <h3><a href="
@@ -317,7 +317,7 @@ SourceOECD is the online library of the Organisation for Economic Co-operation a
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  globalization,  economic indicators,  statistics: international
 </p></div>
 <h3><a href="
@@ -331,7 +331,7 @@ Provides access to U.S. Census Bureau data and information through a wide networ
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 demographics & statistics
 </p></div>
 <h3><a href="
@@ -345,7 +345,7 @@ The authoritative and comprehensive summary of statistics on the social, politic
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 demographics & statistics
 </p></div>
 <h3><a href="
@@ -359,7 +359,7 @@ Bureau of Labor Statistics, US and other country statistical web sites.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 demographics & statistics
 </p></div>
 <h3><a href="
@@ -373,7 +373,7 @@ Leading source of quality data about the nation's people and economy. It provide
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 business planning,  demographics & statistics,  economic indicators
 </p></div>
 <h3><a href="
@@ -389,7 +389,7 @@ statistics: united states, business planning
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 The BEA produces some of the most closely watched economic statistics that influence decisions of government officials,  business people,  and individuals. These statistics provide a comprehensive,  up-to-date picture of the U.S. economy. The Regional link provides wage employment compensation personal income per capita personal income statistics etc. at the state county and metropolitan level.
 </p></div>
 <h3><a href="
@@ -403,7 +403,7 @@ OCLC catalog that contains more than 49 million records describing books, newspa
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: international
 </p></div>
 <h3><a href="
@@ -417,7 +417,7 @@ Zanran is the Google for data searches. Provides numerical data as graphs, table
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states
 </p></div>
 </body>
