--- a/output/ECO.html
+++ b/output/ECO.html
@@ -15,7 +15,7 @@ Archive of full text articles in agricultural and applied economics. Note: Most 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 agricultural economics,  economics
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ Authoritative critical reviews evaluate the most significant research developmen
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ Provides authoritative critical reviews evaluating the most significant research
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 agricultural economics,  environmental economics,  economics
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ Licensing restrictions limit use to 2-5 simultaneous users. If you are unable to
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  statistics
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ Contains current and historical financial data on individual companies, stock ma
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  investment & securities,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades & quotes,  business public policy
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ U.S. Department of Labor. Provides economic indicators, labor statistics, and ot
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators,  labor economics
 </p></div>
 <h3><a href="
@@ -99,7 +99,7 @@ News portal for executives.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 news
 </p></div>
 <h3><a href="
@@ -113,7 +113,7 @@ Presents country risk findings in three main sections: Country Risks, Sectors (c
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  international business,  economics,  risk
 </p></div>
 <h3><a href="
@@ -127,7 +127,7 @@ U.S. Census Bureau. Provides detailed information for local and regional areas o
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  economic indicators
 </p></div>
 <h3><a href="
@@ -141,7 +141,7 @@ U.S. Census Bureau. County Business Patterns (CBP) is an annual series providing
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  business planning,  economics
 </p></div>
 <h3><a href="
@@ -155,7 +155,7 @@ Provides comprehensive analysis of popular topics, including history, current st
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 benefits,  compensation,  corporate culture,  economics,  employment,  ethics,  exports,  imports,  globalization,  international trade,  labor economics,  labor relations,  taxation
 </p></div>
 <h3><a href="
@@ -169,7 +169,7 @@ Provides index related financial data across global markets.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  mergers & acquisitions,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 <h3><a href="
@@ -183,7 +183,7 @@ Site managed by the U.S. Census Bureau and devoted exclusively to "Measuring the
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  statistics: united states
 </p></div>
 <h3><a href="
@@ -197,7 +197,7 @@ The source for economic research from major scholarly economic journals, working
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 Economics,  Economic forecasting,  Econometrics,  Labor economics,  Urban economics,  Labor economics,  S&P 500,  globalization
 </p></div>
 <h3><a href="
@@ -211,7 +211,7 @@ Free, easily available mostly government economic time series data useful for ec
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 consumer price index,  economic indicators
 </p></div>
 <h3><a href="
@@ -225,7 +225,7 @@ From the U.S. Census Bureau, Provides a detailed portrait of the United States e
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 labor economics,  statistics: united states,  business planning
 </p></div>
 <h3><a href="
@@ -239,7 +239,7 @@ Provides the world's most comprehensive firm-level data in emerging markets and 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators,  statistics: united states,  country background
 </p></div>
 <h3><a href="
@@ -253,7 +253,7 @@ From the Federal Interagency Council on Statistical Policy. Provides access to F
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 demographics & statistics,  economics,  government
 </p></div>
 <h3><a href="
@@ -267,7 +267,7 @@ Provides an assessment of the economic performance of each of the 12 regional Fe
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators
 </p></div>
 <h3><a href="
@@ -281,7 +281,7 @@ Provides coverage of U.S. and international financial, economic, and industry da
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 consumer price index,  economic indicators,  employment,  exports,  imports,  foreign direct investment,  gdp,  gross domestic product,  gni,  gross national income,  international trade
 </p></div>
 <h3><a href="
@@ -295,7 +295,7 @@ Searches selected scholarly information across many disciplines and sources, inc
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  economics,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -309,7 +309,7 @@ Provides industry market research reports on over 700 U.S. industries, and brief
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 competitors,  consumer analysis,  economic indicators,  industry classification,  industry overview,  industry trends,  marketing,  market share,  market size
 </p></div>
 <h3><a href="
@@ -323,7 +323,7 @@ From the World Bank. Provides external debt data and selected foreign assets fro
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 debt,  country data,  statistics: international,  economics
 </p></div>
 <h3><a href="
@@ -337,7 +337,7 @@ Electronic archive of core journals in the humanities, social sciences, and scie
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -351,7 +351,7 @@ Provides metropolitan rankings list by population, income, unemployment rate, fe
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic index
 </p></div>
 <h3><a href="
@@ -365,7 +365,7 @@ National statistics for just about any country in the world, presented in over 2
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators,  globalization
 </p></div>
 <h3><a href="
@@ -379,7 +379,7 @@ RDS Business Reference Suite
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development
 </p></div>
 <h3><a href="
@@ -393,7 +393,7 @@ Organized links to valuable online resources in economics from the American Econ
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  demographics & statistics,  economic data: united states,  economic data: international
 </p></div>
 <h3><a href="
@@ -407,7 +407,7 @@ Virtually the only index for finding which papers have cited other papers. Best 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  cited references,  social science,  business,  entrepreneurship,  ethics,  leadership,  management
 </p></div>
 <h3><a href="
@@ -421,7 +421,7 @@ SourceOECD is the online library of the Organisation for Economic Co-operation a
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  globalization,  economic indicators,  statistics: international
 </p></div>
 <h3><a href="
@@ -435,7 +435,7 @@ Leading source of quality data about the nation's people and economy. It provide
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 business planning,  demographics & statistics,  economic indicators
 </p></div>
 <h3><a href="
@@ -449,7 +449,7 @@ This is a free online database updated biannually by the International Monetary 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators
 </p></div>
 <h3><a href="
@@ -463,7 +463,7 @@ World Bank Group datasets, including World Development Indicators (1960-present)
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators
 </p></div>
 <h3><a href="
@@ -479,7 +479,7 @@ Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Ac
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
  annual reports,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  market share,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 </body>
