--- a/output/ENT.html
+++ b/output/ENT.html
@@ -15,7 +15,7 @@ Global association of the worlds leading social entrepreneurs.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 social entrepreneurship
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ Searches selected scholarly information across many disciplines and sources, inc
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  economics,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ Electronic archive of core journals in the humanities, social sciences, and scie
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ Schwab Foundation for Social Entrepreneurship
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 social entrepreneurship,  entrepreneurship research
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ Potomac, MD based organization for nonprofits involved in entrepreneurship; prov
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 social entrepreneurship
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ Virtually the only index for finding which papers have cited other papers. Best 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economics,  cited references,  social science,  business,  entrepreneurship,  ethics,  leadership,  management
 </p></div>
 </body>
