--- a/output/MAR.html
+++ b/output/MAR.html
@@ -15,7 +15,7 @@ Free site from Palo Alto Software, Inc. Use this web site to locate business pla
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 business plans,  marketing plans
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ Searches selected scholarly information across many disciplines and sources, inc
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  economics,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ Provides industry market research reports on over 700 U.S. industries, and brief
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 competitors,  consumer analysis,  economic indicators,  industry classification,  industry overview,  industry trends,  marketing,  market share,  market size
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ Electronic archive of core journals in the humanities, social sciences, and scie
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ From the U.S. Commercial Service. Provides market research reports searchable by
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  biographical information,  foreign language sources,  labor relations,  mergers & acquisitions,  news,  marketing
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ Provides full-text reports on a wide range of market research studies, analyzing
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 advertising,  competitors,  consumer analysis,  industry overview,  industry trends,  lifestyles,  market size,  marketing
 </p></div>
 <h3><a href="
@@ -99,7 +99,7 @@ RDS Business Reference Suite
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development
 </p></div>
 <h3><a href="
@@ -115,7 +115,7 @@ Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Ac
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
  annual reports,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  market share,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 </body>
