--- a/output/PRO.html
+++ b/output/PRO.html
@@ -15,7 +15,7 @@ Important trade show web site, provides latest industry trends and innovations i
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 technology,  product development
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ Provides coverage of U.S. and international financial, economic, and industry da
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 consumer price index,  economic indicators,  employment,  exports,  imports,  foreign direct investment,  gdp,  gross domestic product,  gni,  gross national income,  international trade
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ From the United States International Trade Commission.HTS codes are 6-digit iden
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 product codes
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ RDS Business Reference Suite
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ By the U.S. Census Bureau, the Statistical Classification of Domestic and Foreig
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 product codes
 </p></div>
 </body>
