--- a/output/COM.html
+++ b/output/COM.html
@@ -15,7 +15,7 @@ News portal for executives.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 news
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ From Dow Jones. Provides full text access to over 8,000 business sources includi
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 auditing,  benefits & compensation,  bonds,  brands,  company profiles,  competitors,  corporate culture,  dow jones industrial average,  employment,  ethics,  financial information,  foreign language sources,  globalization,  industry classification,  industry ratios,  international trade,  labor relations,  mergers & acquisitions,  news,  operations management,  quality control,  S&P 500,  stocks,  stock trades quotes,  taxation,  wall street journal
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ One of the leading directories for quick access to company and industry informat
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 annual reports,  biographical information,  company profiles,  competitors,  financial information,  industry classification,  industry overview,  industry trends,  manufacturers,  ownership status,  sec filings,  stocks,  stock trades quotes
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ Offers a wealth of detail including business description, history, property, sub
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 financial information,  company profiles,  competitors
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ Offers a comprehensive library of documents that includes company annual reports
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 company profiles,  competitors,  industry overview,  industry trends
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ Licensing restrictions limit use to 4 simlutaneous users. If you are unable to a
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 analyst reports,  company profiles,  finance,  company,  investment & securities,  mutual funds,  stocks trades quotes
 </p></div>
 <h3><a href="
@@ -99,7 +99,7 @@ RDS Business Reference Suite
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development
 </p></div>
 <h3><a href="
@@ -113,7 +113,7 @@ The International Trade Administration, U.S. Department of Commerce, provides na
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 international trade,  regulations,  laws,  companies,  manufacturing,  jobs,  employment,  trade agreements
 </p></div>
 <h3><a href="
@@ -127,7 +127,7 @@ Provides investment research on stocks, mutual funds, options and convertibles, 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 analyst reports,  finance & investment,  securities,  mutual funds,  stocks,  finance,  company profiles
 </p></div>
 <h3><a href="
@@ -141,7 +141,7 @@ Click on News Pages (top of screen) to get access to major business newspapers. 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  career,  finance investment
 </p></div>
 <h3><a href="
@@ -155,7 +155,7 @@ This site has links to franchisor company homepages where you will find franchis
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 franchising,  companies
 </p></div>
 </body>
