--- a/output/COU.html
+++ b/output/COU.html
@@ -15,7 +15,7 @@ From the U.S. Department of State facts about the land, people, history, governm
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ Contains current and historical financial data on individual companies, stock ma
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  investment & securities,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades & quotes,  business public policy
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ Links to current papers and articles on globalization from the Brookings Institu
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 globalization,  country
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ Central Intelligence Agency (CIA). Provides overviews on most countries of the w
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ Presents country risk findings in three main sections: Country Risks, Sectors (c
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  international business,  economics,  risk
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ United States Commercial Service - U.S. Department of Commerce. Comprehensive lo
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  doing business in,  international business
 </p></div>
 <h3><a href="
@@ -99,7 +99,7 @@ Economic, financial, political and social data for over 140 countries, in most c
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 risk,  international business,  country background
 </p></div>
 <h3><a href="
@@ -113,7 +113,7 @@ From the Federal Research Division of the Library of Congress. On-line versions 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background
 </p></div>
 <h3><a href="
@@ -127,7 +127,7 @@ Provides index related financial data across global markets.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  mergers & acquisitions,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 <h3><a href="
@@ -141,7 +141,7 @@ From The Economist Intelligence Unit, "A practical guide to regulations, operati
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  doing business in,  regulations
 </p></div>
 <h3><a href="
@@ -155,7 +155,7 @@ From The Economist Intelligence Unit, provides economic, political, and market d
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  exports,  imports,  foreign direct investment,  globalization,  news,  statistics: international
 </p></div>
 <h3><a href="
@@ -169,7 +169,7 @@ Provides the world's most comprehensive firm-level data in emerging markets and 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 economic indicators,  statistics: united states,  country background
 </p></div>
 <h3><a href="
@@ -183,7 +183,7 @@ Leading source of information about philanthropy worldwide. The Find Funders sec
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background
 </p></div>
 <h3><a href="
@@ -197,7 +197,7 @@ From the World Bank. Provides direct access to more than 200 debt and financial 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 finance,  international business,  debt,  country background
 </p></div>
 <h3><a href="
@@ -211,7 +211,7 @@ From the United Nations. An annual "In depth analysis and policy recommendations
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country background,  doing business in,  international business,  statistics: international
 </p></div>
 <h3><a href="
@@ -225,7 +225,7 @@ From the World Bank. Provides external debt data and selected foreign assets fro
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 debt,  country data,  statistics: international,  economics
 </p></div>
 <h3><a href="
@@ -241,7 +241,7 @@ Does NOT include access the Wall Street Journal (WSJ). The WSJ is contained in F
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  biographical information,  foreign language sources,  labor relations,  mergers & acquisitions,  news
 </p></div>
 <h3><a href="
@@ -255,7 +255,7 @@ From the U.S. Commercial Service. Provides market research reports searchable by
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  biographical information,  foreign language sources,  labor relations,  mergers & acquisitions,  news,  marketing
 </p></div>
 <h3><a href="
@@ -269,7 +269,7 @@ Provides detailed external debt data that are published individually by countrie
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 debt,  country data
 </p></div>
 <h3><a href="
@@ -283,7 +283,7 @@ RDS Business Reference Suite
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development
 </p></div>
 <h3><a href="
@@ -297,7 +297,7 @@ Accounting, auditing and tax database that provides access to a variety of tax i
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 taxation,  accounting,  auditing
 </p></div>
 <h3><a href="
@@ -311,7 +311,7 @@ The World Bank Group provides direct access to more than 550 development indicat
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 country research
 </p></div>
 </body>
