--- a/output/FIN.html
+++ b/output/FIN.html
@@ -15,7 +15,7 @@ Provides access to interactive charts, quotes, industry analysis and intraday st
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 statistics: united states,  investment & securities,  stocks
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ Contains current and historical financial data on individual companies, stock ma
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  investment & securities,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades & quotes,  business public policy
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ News portal for executives.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 news
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ Contains daily and monthly historical stock data on more than 20,000 stocks (ina
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 financial information,  industry ratios,  mutual funds,  stocks,  stock exchange
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ Provides key business ratios for industries searchable by industry name and SIC 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 financial information,  industry,  ratios
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ Provides index related financial data across global markets.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  mergers & acquisitions,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 <h3><a href="
@@ -99,7 +99,7 @@ From the U.S. Securities and Exchange Commission (SEC). Contains all of the fili
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 financial information,  sec filings,  annual reports
 </p></div>
 <h3><a href="
@@ -113,7 +113,7 @@ A complete business reference covering five general areas: finance and banking; 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 finance
 </p></div>
 <h3><a href="
@@ -127,7 +127,7 @@ From Dow Jones. Provides full text access to over 8,000 business sources includi
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 auditing,  benefits & compensation,  bonds,  brands,  company profiles,  competitors,  corporate culture,  dow jones industrial average,  employment,  ethics,  financial information,  foreign language sources,  globalization,  industry classification,  industry ratios,  international trade,  labor relations,  mergers & acquisitions,  news,  operations management,  quality control,  S&P 500,  stocks,  stock trades quotes,  taxation,  wall street journal
 </p></div>
 <h3><a href="
@@ -141,7 +141,7 @@ From the World Bank. Provides direct access to more than 200 debt and financial 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 finance,  international business,  debt,  country background
 </p></div>
 <h3><a href="
@@ -155,7 +155,7 @@ One of the leading directories for quick access to company and industry informat
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 annual reports,  biographical information,  company profiles,  competitors,  financial information,  industry classification,  industry overview,  industry trends,  manufacturers,  ownership status,  sec filings,  stocks,  stock trades quotes
 </p></div>
 <h3><a href="
@@ -169,7 +169,7 @@ Offers a wealth of detail including business description, history, property, sub
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 financial information,  company profiles,  competitors
 </p></div>
 <h3><a href="
@@ -183,7 +183,7 @@ Licensing restrictions limit use to 4 simlutaneous users. If you are unable to a
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 analyst reports,  company profiles,  finance,  company,  investment & securities,  mutual funds,  stocks trades quotes
 </p></div>
 <h3><a href="
@@ -197,7 +197,7 @@ The MoneyTree Report is a quarterly study of venture capital investment activity
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 business financing,  financing,  venture capital
 </p></div>
 <h3><a href="
@@ -211,7 +211,7 @@ Contains current and historical financial data on individual companies, stock ma
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 finance,  investment,  stocks,  business news,  financial news,  news
 </p></div>
 <h3><a href="
@@ -225,7 +225,7 @@ Provides full-text reports, forecast, analysis, statistics and ratios of major i
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  finance,  investment,  competitors,  industry trends,  industry ratios,  securities,  stocks
 </p></div>
 <h3><a href="
@@ -239,7 +239,7 @@ Standard & Poor's is a major publisher of investment data, including bond rating
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 finance,  investment,  bonds,  stocks,  financial information
 </p></div>
 <h3><a href="
@@ -253,7 +253,7 @@ Provides investment research on stocks, mutual funds, options and convertibles, 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 analyst reports,  finance & investment,  securities,  mutual funds,  stocks,  finance,  company profiles
 </p></div>
 <h3><a href="
@@ -267,7 +267,7 @@ Divided into eight sections: Introduction to Financial Management; Tools of Fina
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 finance,  investment,  financial analysis,  capital
 </p></div>
 <h3><a href="
@@ -281,7 +281,7 @@ Click on News Pages (top of screen) to get access to major business newspapers. 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  career,  finance investment
 </p></div>
 <h3><a href="
@@ -295,7 +295,7 @@ A financial newspaper that provides citations, abstracts and full-text articles 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 finance,  news,  articles,  international,  national
 </p></div>
 <h3><a href="
@@ -311,7 +311,7 @@ Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Ac
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
  annual reports,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  market share,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 </body>
