--- a/output/IND.html
+++ b/output/IND.html
@@ -15,7 +15,7 @@ Contains current and historical financial data on individual companies, stock ma
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  investment & securities,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades & quotes,  business public policy
 </p></div>
 <h3><a href="
@@ -29,7 +29,7 @@ News portal for executives.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 news
 </p></div>
 <h3><a href="
@@ -43,7 +43,7 @@ U.S. Census Bureau.   To facilitate time series use, the U.S. Census Bureau has 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry classification,  NAICS,  SIC
 </p></div>
 <h3><a href="
@@ -57,7 +57,7 @@ Contains daily and monthly historical stock data on more than 20,000 stocks (ina
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 financial information,  industry ratios,  mutual funds,  stocks,  stock exchange
 </p></div>
 <h3><a href="
@@ -71,7 +71,7 @@ Provides key business ratios for industries searchable by industry name and SIC 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 financial information,  industry,  ratios
 </p></div>
 <h3><a href="
@@ -85,7 +85,7 @@ Provides index related financial data across global markets.
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 accounting,  annual reports,  bonds,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  mergers & acquisitions,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 <h3><a href="
@@ -99,7 +99,7 @@ From Dow Jones. Provides full text access to over 8,000 business sources includi
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 auditing,  benefits & compensation,  bonds,  brands,  company profiles,  competitors,  corporate culture,  dow jones industrial average,  employment,  ethics,  financial information,  foreign language sources,  globalization,  industry classification,  industry ratios,  international trade,  labor relations,  mergers & acquisitions,  news,  operations management,  quality control,  S&P 500,  stocks,  stock trades quotes,  taxation,  wall street journal
 </p></div>
 <h3><a href="
@@ -113,7 +113,7 @@ The Gartner Group is a leading provider of market research reports, specializing
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry overview,  industry trends,  technology
 </p></div>
 <h3><a href="
@@ -127,7 +127,7 @@ Searches selected scholarly information across many disciplines and sources, inc
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  economics,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -141,7 +141,7 @@ One of the leading directories for quick access to company and industry informat
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 annual reports,  biographical information,  company profiles,  competitors,  financial information,  industry classification,  industry overview,  industry trends,  manufacturers,  ownership status,  sec filings,  stocks,  stock trades quotes
 </p></div>
 <h3><a href="
@@ -155,7 +155,7 @@ Provides industry market research reports on over 700 U.S. industries, and brief
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 competitors,  consumer analysis,  economic indicators,  industry classification,  industry overview,  industry trends,  marketing,  market share,  market size
 </p></div>
 <h3><a href="
@@ -169,7 +169,7 @@ Electronic archive of core journals in the humanities, social sciences, and scie
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 management,  marketing,  operations management,  organization theory,  public relations,  decision theory,  social entrepreneurship,  technology,  human resource management,  industry analysis models,  labor economics,  labor relations,  leadership
 </p></div>
 <h3><a href="
@@ -183,7 +183,7 @@ Offers a comprehensive library of documents that includes company annual reports
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 company profiles,  competitors,  industry overview,  industry trends
 </p></div>
 <h3><a href="
@@ -197,7 +197,7 @@ Provides full-text reports on a wide range of market research studies, analyzing
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 advertising,  competitors,  consumer analysis,  industry overview,  industry trends,  lifestyles,  market size,  marketing
 </p></div>
 <h3><a href="
@@ -211,7 +211,7 @@ North American Industry Classification System (NAICS)
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry classification
 </p></div>
 <h3><a href="
@@ -225,7 +225,7 @@ Explanation of Michael Porter's Five Forces
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 business plans,  business planning,  competitors,  human resource management,  industry analysis models
 </p></div>
 <h3><a href="
@@ -239,7 +239,7 @@ RDS Business Reference Suite
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development
 </p></div>
 <h3><a href="
@@ -253,7 +253,7 @@ Provides full-text reports, forecast, analysis, statistics and ratios of major i
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  finance,  investment,  competitors,  industry trends,  industry ratios,  securities,  stocks
 </p></div>
 <h3><a href="
@@ -267,7 +267,7 @@ Standard Industrial Classification System (SIC)
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry classification,  industry
 </p></div>
 <h3><a href="
@@ -281,7 +281,7 @@ Click on News Pages (top of screen) to get access to major business newspapers. 
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
 industry research,  company research,  career,  finance investment
 </p></div>
 <h3><a href="
@@ -297,7 +297,7 @@ Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Ac
 <div style="
 font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px; border: 0px grey none; border-radius: 5px; background-color: #FAFAFA
 ">
-<p style=""><strong>Tags</strong>: 
+<p><strong>Tags</strong>: 
  annual reports,  dow jones industrial average,  economic indicators,  financial information,  industry ratios,  investment & securities,  market share,  mergers & acquisitions,  ownership status,  S&P 500,  stocks,  stock exchange,  stock trades quotes
 </p></div>
 </body>
